tests/org.eclipse.php.core.tests/src/org/eclipse/php/core/tests/errors/PHP5ErrorReportingTests#PHP5ErrorReportingTests(String).mjava
	public PHP5ErrorReportingTests(String description) {
		super(description);
	}

